# instrument-geometry-info

./: README.md
.github/ISSUE-TEMPLATE/: new-beamline-layout.yml
.github/ISSUE_TEMPLATE/: new-beamline-layout.yml  new-lab-layout.yml
.github/workflows/: main.yml
Beamlines/: beamline_geometries.cif
Examples/: b4_master.cif
Laboratory/: laboratory_geometries.cif
Tools/: README.md  _b4_1_master.h5  cbf_metadata.cif  cbf_scan_extractor.jl  imgcif_mapper.py  issue_to_imgcif.jl
Tools/imgCIF_Creator/: README.md  setup.cfg  setup.py
Tools/imgCIF_Creator/imgCIF_Creator/: __init__.py  creator.py
Tools/imgCIF_Creator/imgCIF_Creator/assembler/: imgCIF_assembler.py
Tools/imgCIF_Creator/imgCIF_Creator/command_line_interfaces/: __init__.py  parser.py
Tools/imgCIF_Creator/imgCIF_Creator/information_extractors/: __init__.py  cbf_smv.py  cbf_smv_extractor.py  extractor_interface.py  extractor_utils.py  full_cbf.py  hdf5_NxMx.py  hdf5_NxMx_extractor.py  hdf5_nxmx.py  user_input.py  user_input_extractor.py
Tools/imgCIF_Creator/imgCIF_Creator/output_assembler/: __init__.py  imgCIF_assembler.py
Tools/imgCIF_Creator/imgCIF_Creator/output_creator/: __init__.py  block_generators.py  imgCIF_creator.py  imgcif_creator.py
Tools/imgCIF_Creator/imgCIF_Creator/resources/: beamline-layout.yaml  lab-layout.yaml  mycif.cif  user_input.yaml
