[metadata]
name = imgCIF_Creator
version = attr: imgCIF_Creator.__version__
# author = You
# author_email = your@email.address
# url = https://
description = A package to create imgCIF files from datasets.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = imgCIF_Creator, setuptools
# license = BSD 3-Clause License
classifiers =
    # License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    PyYAML
    numpy
    click
    PyCifRW
    h5py
    cbf
    requests

[options.entry_points]
console_scripts =
    creator = imgCIF_Creator.creator:main

[options.package_data]
imgCIF_Creator = resources/user_input.yaml
